--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,7 +13,7 @@
   "buffer_font_family": "Belinsky",
   "theme": {
     "mode": "system",
-    "light": "Ayu Light",
+    "light": "Seoul256 Light",
     "dark": "Ayu Dark"
   },
   "vim": {
