--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -17,6 +17,9 @@
     "dark": "Ayu Dark"
   },
   "vim": {
-    "toggle_relative_line_numbers": true
-  }
+    "toggle_relative_line_numbers": true,
+    "use_system_clipboard": "always",
+    "use_smartcase_find": true
+  },
+  "vertical_scroll_margin": 10
 }
